--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,7 +6,17 @@
     = javascript_include_tag :defaults
     = csrf_meta_tag
   %body
-
+    .usernav
+      - if user_signed_in?
+        Signed in as
+        = current_user.email
+        Not you?
+        = link_to "Sign out", destroy_user_session_path
+      - else
+        = link_to "Sign up", new_user_registration_path
+        or
+        = link_to "Sign in", new_user_session_path
+      
     %p{ :class=>"notice"}= notice
     %p{ :class=>"alert"}= alert
   
