--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,21 +2,25 @@
 %html
   %head
     %title Seven Boxes
-    = stylesheet_link_tag('style', :media => :screen)
-    = javascript_include_tag :defaults
+    = stylesheet_link_tag :all
+    = javascript_include_tag 'application'
     = csrf_meta_tag
-  %body
-    .usernav
-      - if user_signed_in?
-        Signed in as
-        = current_user.email
-        Not you?
-        = link_to "Sign out", destroy_user_session_path
-      - else
-        = link_to "Sign up", new_user_registration_path
-        or
-        = link_to "Sign in", new_user_session_path
-      
+  %body.container_24
+    #header
+      .logo
+        %h1= link_to "7 Boxes", root_path
+      .usernav
+        - if user_signed_in?
+          Signed in as
+          = current_user.email
+          Not you?
+          = link_to "Sign out", destroy_user_session_path
+        - else
+          = link_to "Sign up", new_user_registration_path
+          or
+          = link_to "Sign in", new_user_session_path
+    #banner
+        
     %p{ :class=>"notice"}= notice
     %p{ :class=>"alert"}= alert
   
