--- a/app/stylesheets/style.sass
+++ b/app/stylesheets/style.sass
@@ -35,6 +35,22 @@ body
     :text-shadow 1px 1px 1px $text-shadow
     :filter dropshadow(color=$text-shadow, offx=1, offy=1)    
 
+  .notice
+    :border 1px solid yellow
+    :padding 20px
+    :margin 10px 0
+    :display block
+    :background #FFFFDF
+   
+  .alert
+    :border 1px solid red
+    :padding 20px
+    :margin 10px 0
+    :display block
+    :background #FFDFDF
+  
+  .clear
+    :clear both
 
 // HEADER
 
@@ -42,6 +58,7 @@ body
 #header 
   :clear both
   :height 80px
+  :margin-top 20px
    
   .logo
     h1 a
@@ -58,4 +75,10 @@ body
         :weight bold
       :text-shadow 1px 1px 1px $text-shadow
       :filter dropshadow(color=$text-shadow, offx=1, offy=1)
-      :padding 0 5px 
+      :padding 0 5px
+      
+      
+// CONTENT
+
+#content
+  :clear both
