--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,10 +20,25 @@ body {
     font-weight: bold;
     text-shadow: 1px 1px 1px #a8a7a7;
     filter: dropshadow(color=#a8a7a7, offx=1, offy=1); }
+  body .notice {
+    border: 1px solid yellow;
+    padding: 20px;
+    margin: 10px 0;
+    display: block;
+    background: #ffffdf; }
+  body .alert {
+    border: 1px solid red;
+    padding: 20px;
+    margin: 10px 0;
+    display: block;
+    background: #ffdfdf; }
+  body .clear {
+    clear: both; }
 
 #header {
   clear: both;
-  height: 80px; }
+  height: 80px;
+  margin-top: 20px; }
   #header .logo h1 a {
     text-decoration: none; }
   #header .usernav {
@@ -36,3 +51,6 @@ body {
       text-shadow: 1px 1px 1px #a8a7a7;
       filter: dropshadow(color=#a8a7a7, offx=1, offy=1);
       padding: 0 5px; }
+
+#content {
+  clear: both; }
