the banner - this is just html stuff

--- a/app/stylesheets/style.sass
+++ b/app/stylesheets/style.sass
@@ -35,6 +35,9 @@ body
     :text-shadow 1px 1px 1px $text-shadow
     :filter dropshadow(color=$text-shadow, offx=1, offy=1)    
 
+    img
+      :border 0 none
+
   .notice
     :border 1px solid yellow
     :padding 20px
@@ -77,7 +80,33 @@ body
       :filter dropshadow(color=$text-shadow, offx=1, offy=1)
       :padding 0 5px
       
-      
+// SLIDER
+
+#banner
+  :float left
+
+#slider
+
+  h1
+    :margin 20px 0
+    :float none
+    :display block
+
+  .tab
+    :padding 0 30px 
+   
+  p
+    :margin-left 30px
+   
+   
+// SOCIAL
+
+#social
+
+  a
+    :text-decoration none
+    
+   
 // CONTENT
 
 #content
