--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -1,1 +1,26 @@
-hi
+#banner.grid_17.alpha
+  #slider
+    %ul
+      %li
+        .tab
+          %h1 Live Now
+          %p - Event Name  ~ Descripion of the event, he name of the host.
+          %p - Event Name  ~ Descripion of the event, he name of the host.
+          %p - Event Name  ~ Descripion of the event, he name of the host.
+          
+      
+      %li
+        .tab
+          %h1 Upcommig evens
+          %p - Event Name  ~ Descripion of the event, he name of the host.
+          %p - Event Name  ~ Descripion of the event, he name of the host.
+          %p - Event Name  ~ Descripion of the event, he name of the host.
+          
+#social.grid_7.omega
+  %h2
+    %a{ :href=>"#" }
+      %img{ :src=>"/images/icons.gif" }
+      rss
+  %h2
+    %a{ :href=>"#" }
+      twitter
