--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,6 +20,8 @@ body {
     font-weight: bold;
     text-shadow: 1px 1px 1px #a8a7a7;
     filter: dropshadow(color=#a8a7a7, offx=1, offy=1); }
+    body a img {
+      border: 0 none; }
   body .notice {
     border: 1px solid yellow;
     padding: 20px;
@@ -51,6 +53,21 @@ body {
       text-shadow: 1px 1px 1px #a8a7a7;
       filter: dropshadow(color=#a8a7a7, offx=1, offy=1);
       padding: 0 5px; }
+
+#banner {
+  float: left; }
+
+#slider h1 {
+  margin: 20px 0;
+  float: none;
+  display: block; }
+#slider .tab {
+  padding: 0 30px; }
+#slider p {
+  margin-left: 30px; }
+
+#social a {
+  text-decoration: none; }
 
 #content {
   clear: both; }
