more css, deleted test folder

--- a/app/stylesheets/style.sass
+++ b/app/stylesheets/style.sass
@@ -102,6 +102,8 @@ body
 // SOCIAL
 
 #social
+  :margin 0 0 5px
+  :height 200px
 
   a
     :text-decoration none
@@ -110,4 +112,19 @@ body
 // CONTENT
 
 #content
-  :clear both
+
+#main-content
+  :float left
+  
+  
+// SIDEBAR
+#sidebar
+  :float right
+  
+  
+// FOOTER
+#footer
+ 
+  .contact
+    :text-align right
+    :float right
