--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -3,7 +3,7 @@
     %ul
       %li
         .tab
-          %h1 Live Now
+          %h2 Live Now
           %p - Event Name  ~ Descripion of the event, he name of the host.
           %p - Event Name  ~ Descripion of the event, he name of the host.
           %p - Event Name  ~ Descripion of the event, he name of the host.
@@ -11,16 +11,25 @@
       
       %li
         .tab
-          %h1 Upcommig evens
+          %h2 Comming up NEXT!
           %p - Event Name  ~ Descripion of the event, he name of the host.
           %p - Event Name  ~ Descripion of the event, he name of the host.
           %p - Event Name  ~ Descripion of the event, he name of the host.
-          
-#social.grid_7.omega
-  %h2
-    %a{ :href=>"#" }
-      %img{ :src=>"/images/icons.gif" }
-      rss
-  %h2
-    %a{ :href=>"#" }
-      twitter
+                
+.clear
+
+#main-content-index.grid_17.alpha
+  %h2 Last events submited
+  %p - Event Name  ~ Descripion of the event, he name of the host.
+  %p - Event Name  ~ Descripion of the event, he name of the host.
+  %p - Event Name  ~ Descripion of the event, he name of the host.
+  %p - Event Name  ~ Descripion of the event, he name of the host.
+  %p - Event Name  ~ Descripion of the event, he name of the host.
+  %p - Event Name  ~ Descripion of the event, he name of the host.
+  %p - Event Name  ~ Descripion of the event, he name of the host.
+  %p - Event Name  ~ Descripion of the event, he name of the host.
+  %p - Event Name  ~ Descripion of the event, he name of the host.
+  %p - Event Name  ~ Descripion of the event, he name of the host.
+
+  #paginate
+   
