--- a/app/stylesheets/style.sass
+++ b/app/stylesheets/style.sass
@@ -37,6 +37,9 @@ body
 
     img
       :border 0 none
+      
+  img
+    :vertical-align middle
 
   .notice
     :border 1px solid yellow
@@ -44,6 +47,7 @@ body
     :margin 10px 0
     :display block
     :background #FFFFDF
+    :width 600px
    
   .alert
     :border 1px solid red
@@ -51,6 +55,7 @@ body
     :margin 10px 0
     :display block
     :background #FFDFDF
+    :width 600px
   
   .clear
     :clear both
@@ -112,6 +117,7 @@ body
 // CONTENT
 
 #content
+  :margin-top 30px
 
 #main-content
   :float left
