--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -15,6 +15,9 @@
   <p><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
   <%= f.password_field :current_password %></p>
 
+  <p><%= f.label :time_zone %><br />
+  <%= f.time_zone_select :time_zone %></p>
+
   <p><%= f.submit "Update" %></p>
 <% end %>
 
