--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -12,6 +12,9 @@
   <p><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></p>
 
+  <p><%= f.label :time_zone %><br />
+  <%= f.time_zone_select :time_zone %></p>
+
   <p><%= f.submit "Sign up" %></p>
 <% end %>
 
