events and users

--- a/app/stylesheets/style.sass
+++ b/app/stylesheets/style.sass
@@ -45,17 +45,17 @@ body
     :border 1px solid yellow
     :padding 20px
     :margin 10px 0
-    :display block
+    :display none
     :background #FFFFDF
-    :width 600px
+    :width 500px
    
   .alert
     :border 1px solid red
     :padding 20px
     :margin 10px 0
-    :display block
+    :display none
     :background #FFDFDF
-    :width 600px
+    :width 500px
   
   .clear
     :clear both
@@ -84,6 +84,28 @@ body
       :text-shadow 1px 1px 1px $text-shadow
       :filter dropshadow(color=$text-shadow, offx=1, offy=1)
       :padding 0 5px
+    
+    #myactions
+      :background #484848
+      :color #fff
+      :padding 8px
+      :margin 8px 0 0 18px
+      :display block
+      :text-decoration none
+      :width 270px 
+        
+    #actions
+      :background #fff
+      :border 1px solid #484848
+      :padding 5px
+      :display none
+      :margin 0 0 0 18px
+      :position absolute
+      :width 274px
+      :z-index 100
+
+      a
+        :font-size 16px
       
 // SLIDER
 
