--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,21 +9,23 @@
       .logo
         %h1= link_to "7 Boxes", root_path
       .usernav
-        %p
-          The time now is: 
-          = Time.now
         - if user_signed_in?
           Signed in as
           = current_user.email
           Not you?
           = link_to "Sign out", destroy_user_session_path
           %br
-          %h2
-            %img{ :src=>"/images/profile.png" }
-            = link_to "Edit my profile", edit_user_registration_path
-          %h2
-            %img{ :src=>"/images/add.png" }
-            = link_to 'I Want To Post a New Event', new_event_path
+          %a{ :href=>"#", :id=>"myactions" }My actions
+          #actions
+            %h2
+              %img{ :src=>"/images/profile.png" }
+              = link_to "Edit my profile", edit_user_registration_path
+            %h2
+              %img{ :src=>"/images/add.png" }
+              = link_to 'I Want To Post a New Event', new_event_path
+            %h2
+              %img{ :src=>"/images/my_events.png" }
+              = link_to 'My events', events_path
         - else
           = link_to "Sign up", new_user_registration_path
           or
@@ -65,8 +67,13 @@
         %p
           = "- contact "
           %a{ :href=>"http://twitter.com/uokesita", :target=>"_blank" } @uokesita
-      
-      
-    = javascript_include_tag 'jquery'
+    
+    = javascript_include_tag 'prototype'
+    = javascript_include_tag 'jquery'   
+    %script{ :type=>"text/javascript" }
+      jQuery.noConflict();
+    
     = javascript_include_tag 'slider'
     = javascript_include_tag 'application'
+
+    = javascript_include_tag 'rails'
