--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,16 +28,16 @@ body {
     border: 1px solid yellow;
     padding: 20px;
     margin: 10px 0;
-    display: block;
+    display: none;
     background: #ffffdf;
-    width: 600px; }
+    width: 500px; }
   body .alert {
     border: 1px solid red;
     padding: 20px;
     margin: 10px 0;
-    display: block;
+    display: none;
     background: #ffdfdf;
-    width: 600px; }
+    width: 500px; }
   body .clear {
     clear: both; }
 
@@ -57,6 +57,25 @@ body {
       text-shadow: 1px 1px 1px #a8a7a7;
       filter: dropshadow(color=#a8a7a7, offx=1, offy=1);
       padding: 0 5px; }
+    #header .usernav #myactions {
+      background: #484848;
+      color: white;
+      padding: 8px;
+      margin: 8px 0 0 18px;
+      display: block;
+      text-decoration: none;
+      width: 270px; }
+    #header .usernav #actions {
+      background: white;
+      border: 1px solid #484848;
+      padding: 5px;
+      display: none;
+      margin: 0 0 0 18px;
+      position: absolute;
+      width: 274px;
+      z-index: 100; }
+      #header .usernav #actions a {
+        font-size: 16px; }
 
 #banner {
   float: left; }
