--- a/app/stylesheets/style.sass
+++ b/app/stylesheets/style.sass
@@ -60,6 +60,19 @@ body
   .clear
     :clear both
 
+
+// FORMS
+
+input
+  :padding 8px
+
+
+// PAGINATION
+
+#paginate
+  :text-align center
+
+
 // HEADER
 
 
@@ -124,12 +137,15 @@ body
    
   p
     :margin-left 30px
+    
+  a
+    :text-shadow none
    
    
 // SOCIAL
 
 #social
-  :margin 0 0 5px
+  :margin 45px 0 5px
   :height 200px
 
   a
@@ -143,6 +159,10 @@ body
 
 #main-content
   :float left
+  
+#main-content-index
+  a
+    :text-shadow none
   
   
 // SIDEBAR
