--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :link %><br />
-    <%= f.text_field :link %>
+    <%= f.url_field :link %>
   </div>
   <div class="field">
     <%= f.label :date, 'Date and Time (your local date and time)' %><br />
