--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -13,7 +13,7 @@
   <tr>
     <td><%= event.title %></td>
     <td><%= event.link %></td>
-    <td><%= event.date %></td>
+    <td><%= event.listing_date %></td>
     <td><%= link_to 'Edit', edit_event_path(event) %></td>
     <td><%= link_to 'Destroy', event, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
