--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -24,7 +24,7 @@
     <%= f.url_field :link %>
   </div>
   <div class="field">
-    <%= f.label :date, 'Date and Time (your local date and time)' %><br />
+    <%= f.label :date, 'Date and Time of the event' %><br />
     <%= f.datetime_select :date %>
   </div>
   <div class="actions">
