--- a/app/stylesheets/style.sass
+++ b/app/stylesheets/style.sass
@@ -23,10 +23,20 @@ body
       
   h2
     :color $text-color
-      font:
-        :size 30px
-        :family Arial
+    font:
+      :size 30px
+      :family Arial
     :text-shadow 1px 1px 1px $text-shadow
+    :filter dropshadow(color=$text-shadow, offx=1, offy=1)
+
+  h3
+    :color $text-color
+    font:
+      :size 20px
+      :family Arial
+      :weight normal
+    :line-height 1.2
+    :text-shadow 0px 1px 1px $text-shadow
     :filter dropshadow(color=$text-shadow, offx=1, offy=1)
 
   a
@@ -69,9 +79,12 @@ input
 
 // PAGINATION
 
-#paginate
-  :text-align center
+#main-content-index
+  #paginate
+    :text-align center
 
+    a
+      :display inline
 
 // HEADER
 
@@ -102,7 +115,7 @@ input
       :background #484848
       :color #fff
       :padding 8px
-      :margin 8px 0 0 18px
+      :margin 8px 0 0 65px
       :display block
       :text-decoration none
       :width 270px 
@@ -112,7 +125,7 @@ input
       :border 1px solid #484848
       :padding 5px
       :display none
-      :margin 0 0 0 18px
+      :margin 0 0 0 65px
       :position absolute
       :width 274px
       :z-index 100
@@ -161,16 +174,44 @@ input
   :float left
   
 #main-content-index
+  ul
+    :padding 0 20px
+
+    li
+      :width 615px
+      :margin-bottom 30px
+
   a
     :text-shadow none
+    :margin 5px 0
+    :display block
   
   
+// EVENTS  
+
+#events_table 
+  tr:hover
+    :background #BFBFBF
+
+  th
+    :text-align left
+    :font-size 20px
+
+  td
+    :border 1px solid #000
+    :padding 5px 10px 
+
+    a
+      :margin 20px
+
 // SIDEBAR
+
 #sidebar
   :float right
   
   
 // FOOTER
+
 #footer
  
   .contact
