--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -18,7 +18,7 @@
       %li
         .tab
           %h2 Comming up NEXT!
-          - @upcomming_events.each do |e|
+          - @next_events.each do |e|
             %p 
               = "- " + e.title
               %a{ :href=>"#{e.link}", :target=>"_blank" } go to envent's page
@@ -27,16 +27,15 @@
 .clear
 
 #main-content-index.grid_17.alpha
-  %h2 Last events submited
+  %h2 Upcomming Events
   %ul
-    - @latest_submited_events.each do |e|
-      %li 
+    - @upcoming_events.each do |e|
+      %li.event 
+        %h3= e.title
         %p
-          %b= e.title
-          %br= e.description
-          %br
+          = e.description
           %a{ :href=>"#{e.link}", :target=>"_blank" } go to envent's page
-          %br= e.listing_date
+          = e.listing_date
 
   #paginate
-    = will_paginate @latest_submited_events
+    = will_paginate @upcoming_events
