--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,10 +1,8 @@
 <h2>This are my lastest events added</h2>
 <div class="clear"></div>
-<table>
+<table id="events_table">
   <tr>
     <th>Title</th>
-    <th>Link</th>
-    <th>Date</th>
     <th></th>
     <th></th>
   </tr>
@@ -12,10 +10,8 @@
 <% @events.each do |event| %>
   <tr>
     <td><%= event.title %></td>
-    <td><%= event.link %></td>
-    <td><%= event.listing_date %></td>
-    <td><%= link_to 'Edit', edit_event_path(event) %></td>
-    <td><%= link_to 'Destroy', event, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td class="edit"><%= link_to 'Edit', edit_event_path(event) %></td>
+    <td class="destroy"><%= link_to 'Destroy', event, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
